# discord-quake-alert-bot

./: .env.example  Cargo.toml  README.md
.github/workflows/: release.yml
src/: config.rs  discord.rs  geo.rs  intensity.rs  main.rs  mapgen.rs  model.rs
src/data/: observation_points.tsv
