[package]
name = "quake-alert-bot"
version = "0.1.0"
edition = "2021"
description = "P2P地震情報のWebSocketを購読し、関東を中心に強い揺れの地震をDiscord Webhookへ地図画像付きで通知するbot"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
reqwest = { version = "0.11", default-features = false, features = ["json", "multipart", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
staticmap = "0.4"
image = { version = "0.25", default-features = false, features = ["png"] }
webp = "0.3"
anyhow = "1"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
